tests/compile_fail/invalid_enable_names.c
#define MFSM_ENABLE_NAMES 2
#include "mfsm.h"

int main(void)
{
    return 0;
}
